--- a/papers_with_code/ExperimentalObservations/AAAI-code-mapper/environment.yml
+++ b/papers_with_code/ExperimentalObservations/AAAI-code-mapper/environment.yml
@@ -101,6 +101,7 @@ dependencies:
   - pip:
       - asttokens==2.2.1
       - backcall==0.2.0
+      - catalyst==20.12
       - contourpy==1.0.7
       - coverage==6.5.0
       - coveralls==3.3.1
@@ -132,6 +133,7 @@ dependencies:
       - pluggy==1.0.0
       - powerlaw==1.5
       - prompt-toolkit==3.0.38
+      - protobuf==3.20.3
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
       - pygments==2.15.1
@@ -139,11 +141,13 @@ dependencies:
       - pytest==7.3.1
       - pytest-mock==3.10.0
       - python-dateutil==2.8.2
+      - pyyaml==6.0
       - ripser==0.6.4
       - scikit-learn==1.2.2
       - scipy==1.10.1
       - six==1.16.0
       - stack-data==0.6.2
+      - tensorboardx==2.6
       - threadpoolctl==3.1.0
       - tomli==2.0.1
       - torch-lucent==0.1.8
